2nd commit - code updated

--- a/my-project/test1.html
+++ b/my-project/test1.html
@@ -1,1 +1,6 @@
-<html>Hello, this is Mengwei Huang</html>
+<html>
+    <body>
+        <h2>Info 5145</h2>
+        <p>Hello, this is Mengwei Huang</p>
+    </body>
+</html>
